Fix descriptions a little bit

--- a/plugin/src/main/resources/inspectionDescriptions/BugFinder.html
+++ b/plugin/src/main/resources/inspectionDescriptions/BugFinder.html
@@ -1,9 +1,7 @@
 <html>
 <body>
-<b>BugFinder</b> inspection aims to locate complex (and possibly buggy) patterns in your Python code.
-It works with patterns represented in Python Flow Graphs, which were mined by
-<a href="https://github.com/JetBrains-Research/code-change-miner">code-change-miner</a> tool. Actually,
-inspection tries to find isomorphic subgraphs of patterns in yours program control flow graph, which is built
-automatically.
+<a href="https://github.com/JetBrains-Research/bug-finder"><b>BugFiner</b></a> is a static code analysis tool for
+locating and quick-fixing
+semantic patterns in your Python code.
 </body>
 </html>
